Implement expense cancellation
